--- a/Index.html
+++ b/Index.html
@@ -11,12 +11,11 @@
         <div id="current-module" class="current-module">Выбранный модуль: <span id="module-name">Нет</span></div>
         <nav id="tasks-nav">
             <div class="dropdown">
-                <button class="dropbtn">Домашки</button>
+                <button class="dropbtn" style="width: 190px;">Домашки</button>
                 <div class="dropdown-content" id="modules-menu"></div>
             </div>
         </nav>
     </header>
-
     <div id="content">
         <section class="parallax-section" style="margin-top: -60px;">
             <div class="parallax-content">
@@ -25,7 +24,6 @@
             </div>
         </section>
     </div>
-
     <script src="scripts.js"></script>
 </body>
 </html>
