--- a/homeworks/ModuleOne/Task2.html
+++ b/homeworks/ModuleOne/Task2.html
@@ -1,1 +1,10 @@
-Task2
+
+<link rel="stylesheet" href="homeworks/ModuleOne/Style2.css">
+  <div>
+    <button onclick="startGame()">Стартуем</button>
+    <div class="game-board" id="gameBoard"></div>
+    <div class="result-popup" id="resultPopup">
+        <p id="resultText"></p>
+        <button onclick="resetGame()">Хорошо</button>
+    </div>
+  </div>
