--- a/homeworks/ModuleOne/Task1.html
+++ b/homeworks/ModuleOne/Task1.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Romeo and Juliet - Act 1</title>
+<link rel="stylesheet" href="homeworks/ModuleOne/Style1.css">
 </head>
 <body>
-    What
+    <div class="containerRAJ">
+        <h1>Romeo and Juliet</h1>
+        <h2>ACT 1</h2>
+
+        <div class="prologue">
+            <p><strong>PROLOGUE</strong></p>
+            <p>
+                Two households, both alike in dignity, In fair Verona, where we lay our scene,<br>
+                From ancient grudge break to new mutiny, Where civil blood makes civil hands unclean.<br>
+                From forth the fatal loins of these two foes A pair of star-cross'd lovers take their life;<br>
+                Whose misadventured piteous overthrows Do with their death bury their parents' strife.<br>
+                The fearful passage of their death-mark'd love, And the continuance of their parents' rage,<br>
+                Which, but their children's end, nought could remove, Is now the two hours' traffic of our stage;<br>
+                The which if you with patient ears attend, What here shall miss, our toil shall strive to mend.
+            </p>
+        </div>
+
+        <div class="scene">
+            <p><strong>SCENE I. Verona. A public place.</strong></p>
+            <p class="scene-description">Enter SAMPSON and GREGORY, of the house of Capulet, armed with swords and bucklers</p>
+            
+            <div class="dialogue">
+                <p><span class="character">SAMPSON</span><br>Gregory, o' my word, we'll not carry coals.</p>
+                <p><span class="character">GREGORY</span><br>No, for then we should be colliers.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
